// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RsvpBottomSheet per-member attendance > household name editing (FPP-80) > rejects an empty name with the same Zod message as the profile path > empty-name-rejection 1`] = `
<div>
  <div
    aria-modal="true"
    class="fixed inset-0 z-50 p-4 flex items-end justify-center md:items-center"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="bg-foreground/30 animate-fade-in fixed inset-0 backdrop-blur-sm"
    />
    <div
      class="relative w-full max-w-2xl animate-breathe-in rounded-t-[2rem] md:rounded-[2rem] bg-card p-7 pt-9 pb-10  "
    >
      <div
        class="bg-muted absolute top-3 left-1/2 h-1.5 w-12 -translate-x-1/2 rounded-sm md:hidden"
      />
      <button
        aria-label="Close modal"
        class="text-muted-foreground hover:bg-secondary hover:text-foreground absolute top-5 right-5 rounded-sm p-1.5 transition-colors"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <div
        class=" max-h-[calc(100vh-8rem)] overflow-y-auto overscroll-contain"
      >
        <div
          aria-label="RSVP sections"
          class="border-border bg-secondary/40 sticky top-0 z-10 mx-auto mb-5 flex w-full max-w-md rounded-sm border p-1"
          data-testid="rsvp-tabs"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="bg-card text-foreground flex-1 rounded-sm px-4 py-2 text-sm font-semibold transition-colors"
            data-testid="rsvp-tab-attendance"
            role="tab"
            type="button"
          >
            Attendance
          </button>
          <button
            aria-selected="false"
            class="text-muted-foreground hover:text-foreground flex-1 rounded-sm px-4 py-2 text-sm font-medium transition-colors"
            data-testid="rsvp-tab-dishes"
            role="tab"
            type="button"
          >
            Dishes
          </button>
        </div>
        <div
          class="text-center md:text-left"
        >
          <p
            class="text-terracotta text-sm font-semibold tracking-widest uppercase"
          >
            RSVP
          </p>
          <h3
            class="font-display text-foreground mt-2 text-3xl font-medium tracking-tight md:text-4xl"
          >
            Who's coming?
          </h3>
          <p
            class="text-muted-foreground mt-2 text-base"
          >
            Mark attendance for each person in your household.
          </p>
        </div>
        <div
          class="mt-8"
          data-testid="rsvp-household-name-field"
        >
          <label
            class="text-foreground block text-sm font-medium"
            for="rsvp-household-name"
          >
            Household name
          </label>
          <p
            class="text-muted-foreground mt-1 text-xs"
          >
            Name for your family or group on the roster and confirmations.
          </p>
          <input
            autocomplete="off"
            class="border-border bg-card text-foreground placeholder:text-muted-foreground focus:border-foreground mt-3 block w-full rounded-sm border px-4 py-3 text-base focus:shadow-[0_0_0_3px_rgba(43,45,66,0.08)] focus:outline-none"
            id="rsvp-household-name"
            maxlength="80"
            placeholder="e.g. The Garcia Family"
            type="text"
            value="   "
          />
        </div>
        <ul
          class="mt-8 grid gap-2 sm:grid-cols-2"
        >
          <li
            class="border-border bg-card/40 flex flex-col gap-2 rounded-sm border px-4 py-3"
          >
            <div>
              <input
                aria-label="Name for Alice"
                autocomplete="off"
                class="border-border bg-card text-foreground placeholder:text-muted-foreground focus:border-foreground block w-full rounded-sm border px-3 py-2 text-base focus:shadow-[0_0_0_3px_rgba(43,45,66,0.08)] focus:outline-none "
                data-testid="rsvp-attendee-name"
                maxlength="120"
                placeholder="Name"
                type="text"
                value="Alice"
              />
            </div>
            <div
              class="flex items-center justify-between gap-3"
            >
              <div
                class="min-w-0"
              >
                <button
                  aria-label="Edit age"
                  class="text-muted-foreground hover:text-foreground text-xs"
                  type="button"
                >
                  35
                   yrs
                </button>
              </div>
              <div
                class="flex shrink-0 items-center gap-3"
              >
                <select
                  aria-label="Attendance for Alice"
                  class="border-border bg-card text-foreground focus:border-foreground min-h-10 rounded-sm border px-3 py-2 text-sm focus:shadow-[0_0_0_3px_rgba(43,45,66,0.08)] focus:outline-none"
                >
                  <option
                    value="YES"
                  >
                    Going
                  </option>
                  <option
                    value="NO"
                  >
                    Not going
                  </option>
                  <option
                    value="MAYBE"
                  >
                    Maybe
                  </option>
                </select>
              </div>
            </div>
          </li>
          <li
            class="border-border bg-card/40 flex flex-col gap-2 rounded-sm border px-4 py-3"
          >
            <div>
              <input
                aria-label="Name for Ben"
                autocomplete="off"
                class="border-border bg-card text-foreground placeholder:text-muted-foreground focus:border-foreground block w-full rounded-sm border px-3 py-2 text-base focus:shadow-[0_0_0_3px_rgba(43,45,66,0.08)] focus:outline-none "
                data-testid="rsvp-attendee-name"
                maxlength="120"
                placeholder="Name"
                type="text"
                value="Ben"
              />
            </div>
            <div
              class="flex items-center justify-between gap-3"
            >
              <div
                class="min-w-0"
              >
                <button
                  aria-label="Edit age"
                  class="text-muted-foreground hover:text-foreground text-xs"
                  type="button"
                >
                  8
                   yrs
                </button>
              </div>
              <div
                class="flex shrink-0 items-center gap-3"
              >
                <select
                  aria-label="Attendance for Ben"
                  class="border-border bg-card text-foreground focus:border-foreground min-h-10 rounded-sm border px-3 py-2 text-sm focus:shadow-[0_0_0_3px_rgba(43,45,66,0.08)] focus:outline-none"
                >
                  <option
                    value="YES"
                  >
                    Going
                  </option>
                  <option
                    value="NO"
                  >
                    Not going
                  </option>
                  <option
                    value="MAYBE"
                  >
                    Maybe
                  </option>
                </select>
              </div>
            </div>
          </li>
        </ul>
        <div
          class="mt-4 flex flex-wrap items-center gap-3"
        >
          <button
            class="rounded-sm bg-terracotta/15 text-terracotta hover:bg-terracotta/25 press px-4 py-2 text-sm font-semibold transition-all"
            data-testid="rsvp-add-member-button"
            type="button"
          >
            + Add household member
          </button>
          <button
            class="text-muted-foreground hover:text-foreground text-xs font-medium underline underline-offset-4"
            type="button"
          >
            + Add a one-time guest
          </button>
        </div>
        <p
          class="text-muted-foreground mt-5 text-xs"
        >
          2 people
           going
        </p>
        <div
          class="mt-3"
          data-testid="rsvp-contact-section"
        >
          <button
            class="text-terracotta decoration-terracotta/30 hover:decoration-terracotta text-sm font-semibold underline underline-offset-4 transition-colors"
            type="button"
          >
            + Get SMS updates (optional)
          </button>
        </div>
        <p
          class="bg-destructive/10 text-destructive ring-destructive/30 mt-4 rounded-sm px-4 py-3 text-sm ring-1"
        >
          Household name is required
        </p>
        <a
          class="text-terracotta decoration-terracotta/30 hover:decoration-terracotta mt-3 block text-center text-sm font-semibold underline underline-offset-4"
          data-testid="rsvp-form-potluck-link"
          href="/events/evt-1/potluck"
        >
          See who is bringing what →
        </a>
        <button
          class="rounded-sm bg-terracotta shadow-soft press mt-7 w-full px-6 py-3.5 font-semibold text-white transition-all hover:bg-[#cf6c52] disabled:opacity-50"
        >
          Confirm 2 guests
        </button>
        <button
          class="rounded-sm text-muted-foreground hover:text-destructive mt-3 w-full px-6 py-2.5 text-sm font-medium transition-colors disabled:opacity-50"
        >
          Can't make it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RsvpBottomSheet per-member attendance > household name editing (FPP-80) > renders a household-name input seeded from the snapshot, above the per-member list 1`] = `
<div>
  <div
    aria-modal="true"
    class="fixed inset-0 z-50 p-4 flex items-end justify-center md:items-center"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="bg-foreground/30 animate-fade-in fixed inset-0 backdrop-blur-sm"
    />
    <div
      class="relative w-full max-w-2xl animate-breathe-in rounded-t-[2rem] md:rounded-[2rem] bg-card p-7 pt-9 pb-10  "
    >
      <div
        class="bg-muted absolute top-3 left-1/2 h-1.5 w-12 -translate-x-1/2 rounded-sm md:hidden"
      />
      <button
        aria-label="Close modal"
        class="text-muted-foreground hover:bg-secondary hover:text-foreground absolute top-5 right-5 rounded-sm p-1.5 transition-colors"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <div
        class=" max-h-[calc(100vh-8rem)] overflow-y-auto overscroll-contain"
      >
        <div
          aria-label="RSVP sections"
          class="border-border bg-secondary/40 sticky top-0 z-10 mx-auto mb-5 flex w-full max-w-md rounded-sm border p-1"
          data-testid="rsvp-tabs"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="bg-card text-foreground flex-1 rounded-sm px-4 py-2 text-sm font-semibold transition-colors"
            data-testid="rsvp-tab-attendance"
            role="tab"
            type="button"
          >
            Attendance
          </button>
          <button
            aria-selected="false"
            class="text-muted-foreground hover:text-foreground flex-1 rounded-sm px-4 py-2 text-sm font-medium transition-colors"
            data-testid="rsvp-tab-dishes"
            role="tab"
            type="button"
          >
            Dishes
          </button>
        </div>
        <div
          class="text-center md:text-left"
        >
          <p
            class="text-terracotta text-sm font-semibold tracking-widest uppercase"
          >
            RSVP
          </p>
          <h3
            class="font-display text-foreground mt-2 text-3xl font-medium tracking-tight md:text-4xl"
          >
            Who's coming?
          </h3>
          <p
            class="text-muted-foreground mt-2 text-base"
          >
            Mark attendance for each person in your household.
          </p>
        </div>
        <div
          class="mt-8"
          data-testid="rsvp-household-name-field"
        >
          <label
            class="text-foreground block text-sm font-medium"
            for="rsvp-household-name"
          >
            Household name
          </label>
          <p
            class="text-muted-foreground mt-1 text-xs"
          >
            Name for your family or group on the roster and confirmations.
          </p>
          <input
            autocomplete="off"
            class="border-border bg-card text-foreground placeholder:text-muted-foreground focus:border-foreground mt-3 block w-full rounded-sm border px-4 py-3 text-base focus:shadow-[0_0_0_3px_rgba(43,45,66,0.08)] focus:outline-none"
            id="rsvp-household-name"
            maxlength="80"
            placeholder="e.g. The Garcia Family"
            type="text"
            value="The Garcia Family"
          />
        </div>
        <ul
          class="mt-8 grid gap-2 sm:grid-cols-2"
        >
          <li
            class="border-border bg-card/40 flex flex-col gap-2 rounded-sm border px-4 py-3"
          >
            <div>
              <input
                aria-label="Name for Alice"
                autocomplete="off"
                class="border-border bg-card text-foreground placeholder:text-muted-foreground focus:border-foreground block w-full rounded-sm border px-3 py-2 text-base focus:shadow-[0_0_0_3px_rgba(43,45,66,0.08)] focus:outline-none "
                data-testid="rsvp-attendee-name"
                maxlength="120"
                placeholder="Name"
                type="text"
                value="Alice"
              />
            </div>
            <div
              class="flex items-center justify-between gap-3"
            >
              <div
                class="min-w-0"
              >
                <button
                  aria-label="Edit age"
                  class="text-muted-foreground hover:text-foreground text-xs"
                  type="button"
                >
                  35
                   yrs
                </button>
              </div>
              <div
                class="flex shrink-0 items-center gap-3"
              >
                <select
                  aria-label="Attendance for Alice"
                  class="border-border bg-card text-foreground focus:border-foreground min-h-10 rounded-sm border px-3 py-2 text-sm focus:shadow-[0_0_0_3px_rgba(43,45,66,0.08)] focus:outline-none"
                >
                  <option
                    value="YES"
                  >
                    Going
                  </option>
                  <option
                    value="NO"
                  >
                    Not going
                  </option>
                  <option
                    value="MAYBE"
                  >
                    Maybe
                  </option>
                </select>
              </div>
            </div>
          </li>
          <li
            class="border-border bg-card/40 flex flex-col gap-2 rounded-sm border px-4 py-3"
          >
            <div>
              <input
                aria-label="Name for Ben"
                autocomplete="off"
                class="border-border bg-card text-foreground placeholder:text-muted-foreground focus:border-foreground block w-full rounded-sm border px-3 py-2 text-base focus:shadow-[0_0_0_3px_rgba(43,45,66,0.08)] focus:outline-none "
                data-testid="rsvp-attendee-name"
                maxlength="120"
                placeholder="Name"
                type="text"
                value="Ben"
              />
            </div>
            <div
              class="flex items-center justify-between gap-3"
            >
              <div
                class="min-w-0"
              >
                <button
                  aria-label="Edit age"
                  class="text-muted-foreground hover:text-foreground text-xs"
                  type="button"
                >
                  8
                   yrs
                </button>
              </div>
              <div
                class="flex shrink-0 items-center gap-3"
              >
                <select
                  aria-label="Attendance for Ben"
                  class="border-border bg-card text-foreground focus:border-foreground min-h-10 rounded-sm border px-3 py-2 text-sm focus:shadow-[0_0_0_3px_rgba(43,45,66,0.08)] focus:outline-none"
                >
                  <option
                    value="YES"
                  >
                    Going
                  </option>
                  <option
                    value="NO"
                  >
                    Not going
                  </option>
                  <option
                    value="MAYBE"
                  >
                    Maybe
                  </option>
                </select>
              </div>
            </div>
          </li>
        </ul>
        <div
          class="mt-4 flex flex-wrap items-center gap-3"
        >
          <button
            class="rounded-sm bg-terracotta/15 text-terracotta hover:bg-terracotta/25 press px-4 py-2 text-sm font-semibold transition-all"
            data-testid="rsvp-add-member-button"
            type="button"
          >
            + Add household member
          </button>
          <button
            class="text-muted-foreground hover:text-foreground text-xs font-medium underline underline-offset-4"
            type="button"
          >
            + Add a one-time guest
          </button>
        </div>
        <p
          class="text-muted-foreground mt-5 text-xs"
        >
          2 people
           going
        </p>
        <div
          class="mt-3"
          data-testid="rsvp-contact-section"
        >
          <button
            class="text-terracotta decoration-terracotta/30 hover:decoration-terracotta text-sm font-semibold underline underline-offset-4 transition-colors"
            type="button"
          >
            + Get SMS updates (optional)
          </button>
        </div>
        <a
          class="text-terracotta decoration-terracotta/30 hover:decoration-terracotta mt-3 block text-center text-sm font-semibold underline underline-offset-4"
          data-testid="rsvp-form-potluck-link"
          href="/events/evt-1/potluck"
        >
          See who is bringing what →
        </a>
        <button
          class="rounded-sm bg-terracotta shadow-soft press mt-7 w-full px-6 py-3.5 font-semibold text-white transition-all hover:bg-[#cf6c52] disabled:opacity-50"
        >
          Confirm 2 guests
        </button>
        <button
          class="rounded-sm text-muted-foreground hover:text-destructive mt-3 w-full px-6 py-2.5 text-sm font-medium transition-colors disabled:opacity-50"
        >
          Can't make it
        </button>
      </div>
    </div>
  </div>
</div>
`;
